--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "mongodb": "^6.4.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "xss": "^1.0.15"
   }
 }
